After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733587 - Crash occurs during cache validation of a XMLHttpRequest with Cache-Control "max-age"
Crash occurs during cache validation of a XMLHttpRequest with Cache-Control "...
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: API
unspecified
Other Linux
: Normal major
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-23 03:30 UTC by Raveendra Karu
Modified: 2014-07-24 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adding null check for value to handle this scenario (1.13 KB, patch)
2014-07-23 03:42 UTC, Raveendra Karu
none Details | Review

Description Raveendra Karu 2014-07-23 03:30:15 UTC
Reproduction scenario:
1. Load a page (ex: test page) which caches a XMLHttpRequest resource
2. Close the browser and launch again
3. Load the test page again
4. During cache validation of the XMLHttpRequest request crash occurs
Comment 1 Raveendra Karu 2014-07-23 03:32:14 UTC
I'll be submitting patch and sample test page in the next comment.
Comment 2 Raveendra Karu 2014-07-23 03:42:57 UTC
Created attachment 281449 [details] [review]
Adding null check for value to handle this scenario
Comment 3 Dan Winship 2014-07-24 15:50:27 UTC
This actually has nothing to do with xmlhttp; it's just that "max-age" is supposed to always have a value, and if the server sends an invalid header where max-age is listed without a value, then soup would crash.

committed with an updated commit message explaining that. thanks for the patch