soup-cache: don't crash on invalid Cache-Control header

If a response had a Cache-Control header with a "max-age" attribute
with no value (which is invalid), SoupCache would end up dereferencing
a NULL pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=733587